# funiOS

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
